(lang dune 3.14)

(using menhir 3.0)

(name calc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
